v1.0/README.md
# Sample Hardhat Project

This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.

Try running some of the following tasks:

```shell
npx hardhat help
npx hardhat test
REPORT_GAS=true npx hardhat test
npx hardhat node
npx hardhat run scripts/deploy.ts
```


------------------------|----------|----------|----------|----------|----------------|
File                    |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
------------------------|----------|----------|----------|----------|----------------|
 contracts/             |      100 |    58.33 |      100 |      100 |                |
  BasicDutchAuction.sol |      100 |    58.33 |      100 |      100 |                |
------------------------|----------|----------|----------|----------|----------------|
All files               |      100 |    58.33 |      100 |      100 |                |
------------------------|----------|----------|----------|----------|----------------|