v3.0/README.md
# Sample Hardhat Project

This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.

Try running some of the following tasks:

```shell
npx hardhat help
npx hardhat test
REPORT_GAS=true npx hardhat test
npx hardhat node
npx hardhat run scripts/deploy.ts
```


--------------------------------|----------|----------|----------|----------|----------------|
File                            |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
--------------------------------|----------|----------|----------|----------|----------------|
 contracts/                     |       95 |    83.33 |       90 |     97.3 |                |
  MintingERC20Tokens.sol        |      100 |      100 |      100 |      100 |                |
  MintingERC721Tokens.sol       |      100 |       75 |      100 |      100 |                |
  NFTDutchAuction_ERC20Bids.sol |    92.31 |    83.33 |       80 |     96.3 |             63 |
--------------------------------|----------|----------|----------|----------|----------------|
All files                       |       95 |    83.33 |       90 |     97.3 |                |
--------------------------------|----------|----------|----------|----------|----------------|
